# cgs-playground

./: .gitignore  .gitmodules  Cargo.toml  README.md
C/: data-type.c
Playground/blockchain/pow/ethash/: Cargo.toml
Playground/code-analysis/mio/deep-into-mio/examples/: Cargo.toml  server.rs
Playground/code-analysis/mio/deep-into-mio/examples/mio_06/: benchmark.rs  echo_server.rs  mio_06.rs  syn_strategy.rs
Playground/code-analysis/mio/deep-into-mio/examples/mio_07/: benchmark.rs  mio_07.rs
Playground/code-analysis/mio/deep-into-mio/io/: Cargo.toml
Playground/code-analysis/mio/deep-into-mio/io/src/: lib.rs  service_mio.rs  worker.rs
Playground/code-analysis/mio/v0.6/: README.md
Playground/code-analysis/serialize_deserialize/understanding-serde/: Cargo.toml  expand.rs
Playground/compiler/: hello.c  hello.i  hello.s
Playground/net/ping/: ping.md  ping_inbound.dump  ping_outbound.dump
Playground/net/tcp-lab/: README.md
Playground/os/: README.md
Playground/os/concurrency/: concurrency.md  sum-atomic.c  thread.h
Playground/os/concurrency/locks/: Cargo.toml
Playground/os/concurrency/thread_creation/: Cargo.toml
Playground/os/gossip/function/: pass-by-value-or.c
Playground/os/gossip/little-big-endian/: little-big-endian  little-big-endian.c  little-big-endian.rs
Playground/os/persistence/: persistence.md  printf-race.c
Playground/os/virtualization/: virtualization.md
Playground/os/virtualization/ELF/: a.c  bootmain.c  loader
Playground/os/virtualization/fork-execve-exit/: fork-printf.c  orphan_process.c  zombie_process.c
Playground/os/virtualization/libc/: env.c  package2.c
Playground/os/virtualization/process-address-space/: mmap-disk.py  va.c
Playground/os/virtualization/unix-shell/: sh  sh-xv6.c  signal-handler.c
Playground/sh/: cpu_topology.sh
Rustaceans/Asynchronization/: 01_Futures_Explained.md
Rustaceans/Asynchronization/green-thread-explained/: AFTER.txt  Cargo.toml  README.md
Rustaceans/Asynchronization/green-thread-explained/src/: assembly.rs  bonus.rs  main.rs
Rustaceans/Asynchronization/minimio/: Cargo.toml
Rustaceans/Asynchronization/minimio/src/: example.rs  lib.rs  linux.rs
Rustaceans/RustDesignPatterns/rust-design-pattern/: Cargo.toml
Rustaceans/RustDesignPatterns/rust-design-pattern/src/: lib.rs
Rustaceans/RustDesignPatterns/rust-design-pattern/src/design_patterns/creational/: builder.rs
Rustaceans/RustDesignPatterns/rust-design-pattern/src/idiom/: concatenating_strings_with_format.rs  extensibility.rs  mod.rs  onstack_dynamic_dispatch.rs  temporary_mutability.rs  use_borrowed_types_for_arguments.rs
Rustaceans/RustReference/: 04_Crates_and_source_files.md  09_Patterns.md
Rustaceans/RustReference/rust-reference/: Cargo.toml
Rustaceans/Rustonomicon/: rustonomicon.md
Rustaceans/Rustonomicon/data_layout/src/: dynamically_zero_sized_type.rs  main.rs  repr_rust.rs
Rustaceans/Rustonomicon/ownership/: motivation.md
Rustaceans/Rustonomicon/ownership/hrtbs/: Cargo.toml
Rustaceans/Rustonomicon/ownership/phantom_data/: Cargo.toml
Rustaceans/Rustonomicon/ownership/reference_aliasing/: Cargo.toml
Rustaceans/Rustonomicon/ownership/subtyping_and_variance/: Cargo.toml
Rustaceans/Rustonomicon/type_conversions/src/: dot_operator.rs  main.rs
Rustaceans/Stack/: stack_change.c
Rustaceans/Stack/estimate-thread-stack-size/: Cargo.toml
Rustaceans/Stack/stack-changes-during-function-calls/: Cargo.toml
Rustaceans/rust-variable-assignment/: Cargo.toml
Rustaceans/rust-variable-assignment/src/: main.rs
Rustaceans/rustls-example/: Cargo.toml
Rustaceans/rustls-example/src/: main.rs
Rustaceans/simulate-deadlock/: Cargo.toml
Rustaceans/simulate-deadlock/src/: main.rs
Rustaceans/time-travel-debugging/: Cargo.toml
Rustaceans/time-travel-debugging/src/: main.rs
Rustaceans/trait-object/: README.md
Rustaceans/trait-object/src/: main.rs
Rustaceans/write-cpu-adaptation-code/: Cargo.toml
Rustaceans/write-cpu-adaptation-code/src/: data_cache_hit.rs  instruction_cache_hit.rs  main.rs
(+19 files in other folders)
