[package]
name = "rustls-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rustls = { path = "../../rustls/rustls" }
rustls = "*"

env_logger = "0.9.0"
webpki-roots = "0.22.0"
log = "0.4.4"
