[package]
name = "rust-design-pattern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "concatenating_strings"
path = "src/idiom/concatenating_strings_with_format.rs"

[[bin]]
name = "onstack_dynamic_dispatch"
path = "src/idiom/onstack_dynamic_dispatch.rs"